syntax = "proto3";

option go_package = "edm-entities-signing-workflows-presentation-abstractions";

package Edm.Entities.Signing.Workflows.Presentation.Abstractions;

option csharp_namespace = "Edm.Entities.Signing.Workflows.Presentation.Abstractions";

import "google/protobuf/timestamp.proto";

message SigningElectronicParametersDto {
  string entity_name = 1;
  string entity_number = 2;
  google.protobuf.Timestamp entity_date = 3;
  repeated string documents_attachments_ids = 4;
}
